# animation_brain_analyst_frontend

./: .gitignore  AD_AGENT_IMPLEMENTATION_PLAN.md  AGENTS_AUDIT_REPORT.md  ANIMATION_M1 (10).json  ANIMATION_M1 (11).json  ANIMATION_M1_Complete.json  README.md  STREAMLIT_CLOUD_BEST_PRACTICES.md  Studio.py  TECHNICAL_REPORT.md  USER_GUIDE.md  app.py  convert_md_to_pdf.py  generate_user_guide_pdf.py  pyproject.toml
.streamlit/: config.toml
docs/: CASE_SINGLE_COMPLEX_CLEANUP_PLAYBOOK.md  COMFYUI_INTEGRATION.md  CONTROLNET_ANATOMY_STRATEGY.md  DEMO_CHECKLIST.md  EXECUTION_MANUAL.md  M3_MASTER_PLAN_DYNAMIC_STATIC.md  M4_MASTER_PLAN_DYNAMIC_STATIC.md  PARAMETERS_GUIDE.md  RESCUE_STRATEGY.md  TECHNICAL_REPORT.md  USER_GUIDE.md  WORKFLOW_PARAMS.md  WORKFLOW_REGISTRY.md
modules/: __init__.py  animation_director.py  comfyui_client.py  config.py  gemini_client.py  line_quality_analyzer.py  parameter_plan.py  prompt_engineer.py  reference_compare.py  utils.py  visual_analyst.py  workflow_registry.py
modules/workflows/: __init__.py  registry.py
pages/: 2_🎛️_Parameters_Tuning.py  3_📚_Documentation.py
plans/: enhancement_plan.md
scripts/: convert_md_to_pdf.py  validate_workflow_m3.py  validate_workflow_m4.py
versions/: __init__.py
versions/v1/: README.md
workflows/: ANIMATION_M1.json  ANIMATION_M1_api_version.json  ANIMATION_M2.json  ANIMATION_M2_Api.json  ANIMATION_M2_final_optimized.json  ANIMATION_M2_final_optimized_api.json  Animation_Workflow_M3_Api.json  Animation_Workflow_M4_Api.json
